--- a/grid task/css/style.css
+++ b/grid task/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 .container{
     width: 80vw;
